scans/192.168.224.248/scans/tcp445/smbmap-share-permissions.md

    ________  ___      ___  _______   ___      ___       __         _______
   /"       )|"  \    /"  ||   _  "\ |"  \    /"  |     /""\       |   __ "\
  (:   \___/  \   \  //   |(. |_)  :) \   \  //   |    /    \      (. |__) :)
   \___  \    /\  \/.    ||:     \/   /\   \/.    |   /' /\  \     |:  ____/
    __/  \   |: \.        |(|  _  \  |: \.        |  //  __'  \    (|  /
   /" \   :) |.  \    /:  ||: |_)  :)|.  \    /:  | /   /  \   \  /|__/ \
  (_______/  |___|\__/|___|(_______/ |___|\__/|___|(___/    \___)(_______)
 -----------------------------------------------------------------------------
     SMBMap - Samba Share Enumerator | Shawn Evans - ShawnDEvans@gmail.com
                     https://github.com/ShawnDEvans/smbmap

[\] Checking for open ports...
[|] Checking for open ports...
[*] Detected 1 hosts serving SMB
[/] Checking for open ports...
[-] Checking for open ports...
[\] Checking for open ports...
[|] Checking for open ports...
[/] Checking for open ports...
[-] Checking for open ports...
                                                                
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[*] Established 1 SMB session(s)
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[\] Authenticating......
[|] Authenticating......
[/] Authenticating......
[-] Authenticating......
[+] IP: 192.168.224.248:445	Name: 192.168.224.248     	Status: [32mAuthenticated[0m
	Disk                                                  	Permissions	Comment
	----                                                  	-----------	-------
	ADMIN$                                            	[31mNO ACCESS[0m	Remote Admin
	C$                                                	[31mNO ACCESS[0m	Default share
	IPC$                                              	[33mREAD ONLY[0m	Remote IPC
	transfer                                          	[32mREAD, WRITE[0m
	Users                                             	[33mREAD ONLY[0m

